--- a/index.html
+++ b/index.html
@@ -626,7 +626,7 @@
             <div class="nav-menu">
                 <a href="#overview" class="nav-link">Overview</a>
                 <a href="#pathways" class="nav-link">Pathways</a>
-                <a href="#game" class="nav-link">Minigame</a>
+                <a href="#game" class="nav-link">Metapoly</a>
                 <a href="#contact" class="nav-link">Contact</a>
             </div>
             <div class="nav-toggle">
