--- a/index.html
+++ b/index.html
@@ -723,7 +723,7 @@
             </section>
 
             <section id="game" class="section">
-                <h2>Minigame</h2>
+                <h2>Metapoly</h2>
                 <div class="grid">
                     <div class="card">
                         <i class="fas fa-info-circle card-icon"></i>
