--- a/index.html
+++ b/index.html
@@ -728,17 +728,17 @@
                     <div class="card">
                         <i class="fas fa-info-circle card-icon"></i>
                         <h3>Game Introduction</h3>
-                        <p>Fun educational games exploring biochemistry metabolic networks, mastering core concepts of cellular metabolism through interactive experiences</p>
+                        <p>Fun educational games exploring biochemistry metabolic networks</p>
                     </div>
                     <div class="card">
                         <i class="fas fa-gamepad card-icon"></i>
                         <h3>How to Play</h3>
-                        <p>Match molecules with enzymes, build metabolic pathways, challenge biochemistry knowledge quizzes, learning through fun experiences</p>
+                        <p>Master core concepts of cellular metabolism through interactive experiences</p>
                     </div>
                     <div class="card">
                         <i class="fas fa-puzzle-piece card-icon"></i>
                         <h3>Game Content</h3>
-                        <p>Covers core metabolic pathways including glycolysis, TCA cycle, oxidative phosphorylation, with 1000+ knowledge points to explore</p>
+                        <p>Covers core metabolic pathways including glycolysis, TCA cycle, oxidative phosphorylation</p>
                     </div>
                 </div>
             </section>
