--- a/name.html
+++ b/name.html
@@ -318,7 +318,7 @@
             </section>
 
             <section class="section">
-                <h2>🔬 Glycolysis Pathway (Glycolysis) Intermediates</h2>
+                <h2>🔬 Glycolysis Intermediates</h2>
                 <div class="molecule-grid">
                     <div class="molecule-card">
                         <div class="molecule-name">
@@ -403,7 +403,7 @@
             </section>
 
             <section class="section">
-                <h2>📊 Tricarboxylic Acid Cycle (TCA Cycle) Compounds</h2>
+                <h2>📊 Tricarboxylic Acid (TCA) Cycle Compounds</h2>
                 <div class="molecule-grid">
                     <div class="molecule-card">
                         <div class="molecule-name">
@@ -591,7 +591,7 @@
             </section>
 
             <section class="section">
-                <h2>🏃‍♂️ Exercise Metabolism Related</h2>
+                <h2>🏃‍♂️ Anaerobic Metabolism Related</h2>
                 <div class="molecule-grid">
                     <div class="molecule-card">
                         <div class="molecule-name">
@@ -623,14 +623,6 @@
                             <a href="https://en.wikipedia.org/wiki/Alanine" target="_blank" style="color: inherit; text-decoration: none;">Alanine</a>
                         </div>
                         <div class="molecule-description">Product of pyruvate transamination with glutamate in muscle</div>
-                    </div>
-
-                    <div class="molecule-card">
-                        <div class="molecule-name">
-                            <i class="fas fa-atom"></i>
-                            <a href="https://en.wikipedia.org/wiki/Phosphorylation" target="_blank" style="color: inherit; text-decoration: none;">Phosphorylation</a>
-                        </div>
-                        <div class="molecule-description">Important mechanism for metabolic regulation</div>
                     </div>
                 </div>
             </section>
@@ -752,28 +744,7 @@
             </section>
 
             <section class="section">
-                <h2>🍶 Alcohol Metabolism Related</h2>
-                <div class="molecule-grid">
-                    <div class="molecule-card">
-                        <div class="molecule-name">
-                            <i class="fas fa-atom"></i>
-                            <a href="https://en.wikipedia.org/wiki/Acetaldehyde" target="_blank" style="color: inherit; text-decoration: none;">Acetaldehyde</a>
-                        </div>
-                        <div class="molecule-description">Intermediate product of ethanol fermentation, toxic</div>
-                    </div>
-
-                    <div class="molecule-card">
-                        <div class="molecule-name">
-                            <i class="fas fa-atom"></i>
-                            <a href="https://en.wikipedia.org/wiki/Ethanol" target="_blank" style="color: inherit; text-decoration: none;">Ethanol</a>
-                        </div>
-                        <div class="molecule-description">Final product of yeast fermentation</div>
-                    </div>
-                </div>
-            </section>
-
-            <section class="section">
-                <h2>🏥 Liver Metabolism Related</h2>
+                <h2>🏥 Hepatic Glycogen Metabolism Related</h2>
                 <div class="molecule-grid">
                     <div class="molecule-card">
                         <div class="molecule-name">
