--- a/index.html
+++ b/index.html
@@ -727,12 +727,16 @@
                 <div class="grid">
                     <div class="card">
                         <i class="fas fa-info-circle card-icon"></i>
+                        <a href="Introduction.html" target="_blank" style="color: inherit; text-decoration: none;">
                         <h3>Game Introduction</h3>
+                        </a>
                         <p>Fun educational games exploring biochemistry metabolic networks</p>
                     </div>
                     <div class="card">
                         <i class="fas fa-gamepad card-icon"></i>
+                        <a href="Rules.html" target="_blank" style="color: inherit; text-decoration: none;">
                         <h3>How to Play</h3>
+                        </a>
                         <p>Master core concepts of cellular metabolism through interactive experiences</p>
                     </div>
                     <div class="card">
