--- a/Rules.html
+++ b/Rules.html
@@ -20,7 +20,7 @@
         }
 
         .container {
-            max-width: 1400px;
+            max-width: 1200px;
             margin: 0 auto;
             padding: 20px;
         }
@@ -340,11 +340,10 @@
         }
 
         footer {
-            background-color: #0d47a1;
-            color: white;
             text-align: center;
-            padding: 30px;
-            margin-top: 40px;
+            color: white;
+            opacity: 0.8;
+            padding: 20px 0;
         }
 
         .final-tagline {
@@ -1064,10 +1063,8 @@
             </section>
         </main>
 
-        <footer>
-            <div class="final-tagline">Master the Science of Metabolism</div>
-            <p>Learn biochemistry through strategic gameplay in this innovative educational card game.</p>
-            <p class="disclaimer">Metapoly - Where Science Meets Strategy 🎯</p>
+        <footer class="footer">
+            <p>&copy; 2025 Biochemistry Metabolic Network Visualization Project | Exploring the Molecular World of Life</p>
         </footer>
     </div>
 </body>
