--- a/name.html
+++ b/name.html
@@ -243,13 +243,13 @@
 <body>
     <div class="container">
         <header class="header">
-            <h1>🧬 Biochemistry Metabolism Network</h1>
+            <h1>Biochemistry Metabolism Network</h1>
             <p>Exploring key molecules and enzymes in complex metabolic pathways within cells</p>
         </header>
 
         <main class="main-content">
             <section class="section">
-                <h2>⚡ Energy Metabolism Related Compounds</h2>
+                <h2>Energy Metabolism Related Compounds</h2>
                 <div class="molecule-grid">
                     <div class="molecule-card">
                         <div class="molecule-name">
@@ -318,7 +318,7 @@
             </section>
 
             <section class="section">
-                <h2>🔬 Glycolysis Intermediates</h2>
+                <h2>Glycolysis Intermediates</h2>
                 <div class="molecule-grid">
                     <div class="molecule-card">
                         <div class="molecule-name">
@@ -403,7 +403,7 @@
             </section>
 
             <section class="section">
-                <h2>📊 Tricarboxylic Acid (TCA) Cycle Compounds</h2>
+                <h2>Tricarboxylic Acid (TCA) Cycle Compounds</h2>
                 <div class="molecule-grid">
                     <div class="molecule-card">
                         <div class="molecule-name">
@@ -472,7 +472,7 @@
             </section>
 
             <section class="section">
-                <h2>🧬 Glycogen Metabolism Related</h2>
+                <h2>Glycogen Metabolism Related</h2>
                 <div class="molecule-grid">
                     <div class="molecule-card">
                         <div class="molecule-name">
@@ -501,7 +501,7 @@
             </section>
 
             <section class="section">
-                <h2>🌿 Photosynthesis Related</h2>
+                <h2>Photosynthesis Related</h2>
                 <div class="molecule-grid">
                     <div class="molecule-card">
                         <div class="molecule-name">
@@ -570,7 +570,7 @@
             </section>
 
             <section class="section">
-                <h2>🧪 Pentose Phosphate Pathway Related</h2>
+                <h2>Pentose Phosphate Pathway Related</h2>
                 <div class="molecule-grid">
                     <div class="molecule-card">
                         <div class="molecule-name">
@@ -591,7 +591,7 @@
             </section>
 
             <section class="section">
-                <h2>🏃‍♂️ Anaerobic Metabolism Related</h2>
+                <h2>Anaerobic Metabolism Related</h2>
                 <div class="molecule-grid">
                     <div class="molecule-card">
                         <div class="molecule-name">
@@ -628,7 +628,7 @@
             </section>
 
             <section class="section">
-                <h2>🔄 Amino Acid Metabolism Related</h2>
+                <h2>Amino Acid Metabolism Related</h2>
                 <div class="molecule-grid">
                     <div class="molecule-card">
                         <div class="molecule-name">
@@ -675,7 +675,7 @@
             </section>
 
             <section class="section">
-                <h2>💰 Nucleotide Metabolism Related</h2>
+                <h2>Nucleotide Metabolism Related</h2>
                 <div class="molecule-grid">
                     <div class="molecule-card">
                         <div class="molecule-name">
@@ -744,7 +744,7 @@
             </section>
 
             <section class="section">
-                <h2>🏥 Hepatic Glycogen Metabolism Related</h2>
+                <h2>Hepatic Glycogen Metabolism Related</h2>
                 <div class="molecule-grid">
                     <div class="molecule-card">
                         <div class="molecule-name">
@@ -781,7 +781,7 @@
             </section>
 
             <section class="section">
-                <h2>🧴 Fatty Acid Metabolism Related</h2>
+                <h2>Fatty Acid Metabolism Related</h2>
                 <div class="molecule-grid">
                     <div class="molecule-card">
                         <div class="molecule-name">
@@ -818,7 +818,7 @@
             </section>
 
             <section class="section">
-                <h2>🧬 Nucleic Acid Synthesis Related</h2>
+                <h2>Nucleic Acid Synthesis Related</h2>
                 <div class="molecule-grid">
                     <div class="molecule-card">
                         <div class="molecule-name">
@@ -871,7 +871,7 @@
             </section>
 
             <section class="section">
-                <h2>⚡ Oxidative Phosphorylation Related</h2>
+                <h2>Oxidative Phosphorylation Related</h2>
                 <div class="molecule-grid">
                     <div class="molecule-card">
                         <div class="molecule-name">
