--- a/enzyme.html
+++ b/enzyme.html
@@ -222,13 +222,13 @@
 <body>
     <div class="container">
         <header class="header">
-            <h1>🧬 Enzyme Classes and Functions</h1>
+            <h1>Enzyme Classes and Functions</h1>
             <p>Exploring the catalytic enzymes that drive biochemical reactions and metabolic processes</p>
         </header>
 
         <main class="main-content">
             <section class="section">
-                <h2>🧬 Major Enzyme Classes</h2>
+                <h2>Major Enzyme Classes</h2>
                 <div class="enzyme-grid">
                     <div class="enzyme-card">
                         <div class="enzyme-name">
@@ -281,7 +281,7 @@
             </section>
             
             <section class="section">
-                <h2>🔬 Glycolysis Enzymes</h2>
+                <h2>Glycolysis Enzymes</h2>
                 <div class="enzyme-grid">
                     <div class="enzyme-card">
                         <div class="enzyme-name">
@@ -366,7 +366,7 @@
             </section>
 
             <section class="section">
-                <h2>📈 TCA Cycle Enzymes</h2>
+                <h2>TCA Cycle Enzymes</h2>
                 <div class="enzyme-grid">
                     <div class="enzyme-card">
                         <div class="enzyme-name">
@@ -427,7 +427,7 @@
             </section>
 
             <section class="section">
-                <h2>🧬 Glycogen Metabolism Enzymes</h2>
+                <h2>Glycogen Metabolism Enzymes</h2>
                 <div class="enzyme-grid">
                     <div class="enzyme-card">
                         <div class="enzyme-name">
@@ -480,7 +480,7 @@
             </section>
 
             <section class="section">
-                <h2>🌿 Photosynthesis Enzymes</h2>
+                <h2>Photosynthesis Enzymes</h2>
                 <div class="enzyme-grid">
                     <div class="enzyme-card">
                         <div class="enzyme-name">
@@ -509,7 +509,7 @@
             </section>
 
             <section class="section">
-                <h2>🧪 Pentose Phosphate Pathway Enzymes</h2>
+                <h2>Pentose Phosphate Pathway Enzymes</h2>
                 <div class="enzyme-grid">
                     <div class="enzyme-card">
                         <div class="enzyme-name">
@@ -530,7 +530,7 @@
             </section>
             
             <section class="section">
-                <h2>🔄 Amino Acid Metabolism Enzymes</h2>
+                <h2>Amino Acid Metabolism Enzymes</h2>
                 <div class="enzyme-grid">
                     <div class="enzyme-card">
                         <div class="enzyme-name">
@@ -591,7 +591,7 @@
             </section>
 
             <section class="section">
-                <h2>💰 Nucleotide Metabolism Enzymes</h2>
+                <h2>Nucleotide Metabolism Enzymes</h2>
                 <div class="enzyme-grid">
                     <div class="enzyme-card">
                         <div class="enzyme-name">
@@ -660,7 +660,7 @@
             </section>
 
             <section class="section">
-                <h2>🍶 Alcohol Metabolism Enzymes</h2>
+                <h2>Alcohol Metabolism Enzymes</h2>
                 <div class="enzyme-grid">
                     <div class="enzyme-card">
                         <div class="enzyme-name">
@@ -681,7 +681,7 @@
             </section>
 
             <section class="section">
-                <h2>🧴 Fatty Acid Metabolism Enzymes</h2>
+                <h2>Fatty Acid Metabolism Enzymes</h2>
                 <div class="enzyme-grid">
                     <div class="enzyme-card">
                         <div class="enzyme-name">
@@ -742,7 +742,7 @@
             </section>
 
             <section class="section">
-                <h2>💊 Cholesterol Metabolism Enzymes</h2>
+                <h2>Cholesterol Metabolism Enzymes</h2>
                 <div class="enzyme-grid">
                     <div class="enzyme-card">
                         <div class="enzyme-name">
@@ -771,7 +771,7 @@
             </section>
 
             <section class="section">
-                <h2>⚡ Oxidative Phosphorylation Enzymes</h2>
+                <h2>Oxidative Phosphorylation Enzymes</h2>
                 <div class="enzyme-grid">
                     <div class="enzyme-card">
                         <div class="enzyme-name">
