--- a/Rules.html
+++ b/Rules.html
@@ -1040,8 +1040,8 @@
 
             <h3>1. Feedback Regulation of Energy State</h3>
             <ul>
-                <li><strong>High-Energy State</strong> (ATP>15): Inhibits catabolism, promotes anabolism</li>
-                <li><strong>Low-Energy State</strong> (ATP&lt;5): Promotes catabolism, inhibits anabolism</li>
+                <li><strong>High-Energy State</strong> (ATP>15) will inhibit catabolism, promote anabolism</li>
+                <li><strong>Low-Energy State</strong> (ATP&lt;5) will promote catabolism, inhibit anabolism</li>
                 <li>Manifested as reduced costs/increased yields for certain reactions under low-energy state</li>
             </ul>
 
