--- a/index.html
+++ b/index.html
@@ -741,7 +741,9 @@
                     </div>
                     <div class="card">
                         <i class="fas fa-puzzle-piece card-icon"></i>
+                        <a href="gamecontent.html" target="_blank" style="color: inherit; text-decoration: none;">
                         <h3>Game Content</h3>
+                        </a>
                         <p>Covers core metabolic pathways including glycolysis, TCA cycle, oxidative phosphorylation</p>
                     </div>
                 </div>
